# hybrid_textnorm

./: .dockerignore  Dockerfile  LICENSE.txt  README.md  evaluate.py  find_rerank_parameters.py  normalize.py  prepare_dataset.py  pyproject.toml  train.py
baselines/cab/: fetch_cab_normalization.py
baselines/csmtiser_sentence/: 0001-fix-code.patch  config.yml  run_train_and_eval.sh
baselines/csmtiser_token/: Dockerfile  config.yml  run_train_and_eval.sh
baselines/norma/: Dockerfile  norma.cfg  run_train_and_eval.sh
baselines/output/: README.md
baselines/transnormer/: 0001-fix-code.patch  Dockerfile  run_train_and_eval.sh  test_config.toml  training_config.toml
contrib/: error_analysis.py  find_rerank_parameters.py
dataset/: dataset_split.tsv  dtaec-0.03.tar.gz.sha256
hybrid_textnorm/: align_levenshtein.py  beam_search.py  cli_normalize.py  detokenizer.py  lexicon.py  metrics.py  normalization.py  preprocess.py  training.py  wedit_distance_align.py
